2017-10-08  Bruno Haible  <bruno@clisp.org>

	Fix misuse of Autoconf cache.
	* m4/mmap.m4 (CL_MMAP): Put the complete test result in a single *_cv_*
	variable.
	* aclocal.m4, src/configure: Regenerated.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Fix build failure with pre-C99 compilers (regression from 2017-03-14).
	* spvw_mmap.d: Use 'var' where appropriate.
	* pathname.d: Put (void)param statements first.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Properly recognize PowerPC64 CPU on AIX.
	* lispbibl.d (POWERPC64): Define also when _ARCH_PPC64 is defined.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Fix error when creating lispbibl.h on AIX.
	* makemake.in (lispbibl.h): Start the command with '( (', not '(('.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Fix false alarm about mmap on DragonFly BSD.
	* spvw_mmap.d (mincore_works): New variable.
	(mincore_init): Initialize it.
	(warn_before_mmap): Do nothing if mincore_works is false.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Relax the Autoconf test for mmap with MAP_FIXED.
	* m4/mmap.m4 (CL_MMAP): Test only whether mmap with MAP_FIXED works
	for some address.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Remove support for Sun-4 machines prior to Sun-4m.
	* m4/mmap.m4 (CL_MMAP): Don't define HAVE_MMAP_DEVZERO_SUN4_29.
	* configure.in: Update comment.
	* makemake.in (XCFLAGS): Don't define SUN4_29.
	* lispbibl.d: Remove tests of SUN4_29.
	* unix.d: Simplify accordingly.
	* spvw.d (init_memory): Remove SUN4_29 special case.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Update after the newest change in libsigsegv's API.